fixed drinkList not showing up

--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ hr {
     justify-content: center;
     align-items: center;
     width: 1000px;
-    margin-top: 20px;
 }
 
 .drink-list-item {
